--- a/FastMember/FastMember.csproj
+++ b/FastMember/FastMember.csproj
@@ -40,7 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" />
+    <Compile Include="CallSiteCache.cs" />
+    <Compile Include="MemberSet.cs" />
+    <Compile Include="ObjectAccessor.cs" />
+    <Compile Include="ObjectReader.cs" />
+    <Compile Include="TypeAccessor.cs" />
+    <Compile Include="TypeHelpers.cs" />
     <Compile Include="*\*.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
